force-app/main/default/objects/Case/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Account Name for Process Notifications so we don&#39;t have to put logic around handling when there&#39;s an Account, a Contact and or a Customer Email.</description>
    <formula>IF (AccountId != null,  
     Account.Name,
     SuppliedEmail)</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>