force-app/main/default/objects/Case/fields/Case_Comment__c.field-meta.xml
<CustomField>
    <fullName>Case_Comment__c</fullName>
    <description>Case comment for generating automated notifications. See SFDC  KA 000339344 for more info.</description>
    <label>Case Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>