force-app/main/default/objects/Case/fields/CloseReason__c.field-meta.xml
<CustomField>
    <fullName>CloseReason__c</fullName>
    <description>Reason for customer closing the case or Provar employee resolving the case</description>
    <inlineHelpText>Please provide some additional information about why you are resolving or closing this case so we can understand more about the issue encountered.</inlineHelpText>
    <label>Reason/Resolution</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>