force-app/main/default/objects/Case/fields/RaisedBy__c.field-meta.xml
<CustomField>
    <fullName>RaisedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RaisedBy is a copy of the original case creator. It&#39;s useful when the case has been re-assigned to a queue or success team member so that we can ensure the Case is included in a Raised By Me list view for community users</description>
    <label>RaisedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>